@@ -64,20 +64,20 @@ class JacksonTreeTest {
         }
     }
 
-    private static List<JsonNode> eval(Segment... segments) {
+    private static List<JsonNode> eval(Segment<JsonNode>... segments) {
         return evalOn(BOOKSTORE, segments);
     }
 
-    private static List<JsonNode> evalOn(JsonNode document, Segment... segments) {
+    private static List<JsonNode> evalOn(JsonNode document, Segment<JsonNode>... segments) {
         var results = new ArrayList<JsonNode>();
-        new JacksonTree().eval(document, List.of(new Path(Identifier.ROOT, List.of(segments), results::add)));
+        new JacksonTree<>(new Jackson2Tree()).eval(document, List.of(new Path<>(Identifier.ROOT, List.of(segments), results::add)));
         return results;
     }
 
     @Test
     void descendantMatchesNameAtAnyDepth() {
         // When
-        var authors = eval(new Segment.Descendant(new Selector.Name("author")));
+        var authors = eval(new Segment.Descendant<>(new Selector.Name<>("author")));
 
         // Then
         assertThat(authors).map(JsonNode::asText)
@@ -88,10 +88,10 @@ class JacksonTreeTest {
     void childSegmentsNavigateNamedAndWildcard() {
         // When
         var authors = eval(
-                new Segment.Child(new Selector.Name("store")),
-                new Segment.Child(new Selector.Name("book")),
-                new Segment.Child(new Selector.Children()),
-                new Segment.Child(new Selector.Name("author")));
+                new Segment.Child<>(new Selector.Name<>("store")),
+                new Segment.Child<>(new Selector.Name<>("book")),
+                new Segment.Child<>(new Selector.Children<>()),
+                new Segment.Child<>(new Selector.Name<>("author")));
 
         // Then
         assertThat(authors).map(JsonNode::asText)
@@ -101,7 +101,7 @@ class JacksonTreeTest {
     @Test
     void wildcardSelectsAllChildren() {
         // When
-        var children = eval(new Segment.Child(new Selector.Name("store")), new Segment.Child(new Selector.Children()));
+        var children = eval(new Segment.Child<>(new Selector.Name<>("store")), new Segment.Child<>(new Selector.Children<>()));
 
         // Then
         assertThat(children).hasSize(2); // the book array and the bicycle object
@@ -111,9 +111,9 @@ class JacksonTreeTest {
     void indexSelectorPicksArrayElement() {
         // When
         var titles = eval(
-                new Segment.Descendant(new Selector.Name("book")),
-                new Segment.Child(new Selector.Index(2)),
-                new Segment.Child(new Selector.Name("title")));
+                new Segment.Descendant<>(new Selector.Name<>("book")),
+                new Segment.Child<>(new Selector.Index<>(2)),
+                new Segment.Child<>(new Selector.Name<>("title")));
 
         // Then
         assertThat(titles).map(JsonNode::asText).containsExactly("Moby Dick");
@@ -123,9 +123,9 @@ class JacksonTreeTest {
     void indexSelectorCountsNegativeIndicesFromEnd() {
         // When
         var titles = eval(
-                new Segment.Descendant(new Selector.Name("book")),
-                new Segment.Child(new Selector.Index(-1)),
-                new Segment.Child(new Selector.Name("title")));
+                new Segment.Descendant<>(new Selector.Name<>("book")),
+                new Segment.Child<>(new Selector.Index<>(-1)),
+                new Segment.Child<>(new Selector.Name<>("title")));
 
         // Then
         assertThat(titles).map(JsonNode::asText).containsExactly("The Lord of the Rings");
@@ -135,9 +135,9 @@ class JacksonTreeTest {
     void segmentAppliesUnionOfSelectors() {
         // When
         var authors = eval(
-                new Segment.Descendant(new Selector.Name("book")),
-                new Segment.Child(List.of(new Selector.Index(0), new Selector.Index(1))),
-                new Segment.Child(new Selector.Name("author")));
+                new Segment.Descendant<>(new Selector.Name<>("book")),
+                new Segment.Child<>(List.of(new Selector.Index<>(0), new Selector.Index<>(1))),
+                new Segment.Child<>(new Selector.Name<>("author")));
 
         // Then
         assertThat(authors).map(JsonNode::asText).containsExactly("Nigel Rees", "Evelyn Waugh");
@@ -150,9 +150,9 @@ class JacksonTreeTest {
         var prices = new ArrayList<JsonNode>();
 
         // When
-        new JacksonTree().eval(BOOKSTORE, List.of(
-                new Path(Identifier.ROOT, List.of(new Segment.Descendant(new Selector.Name("author"))), authors::add),
-                new Path(Identifier.ROOT, List.of(new Segment.Descendant(new Selector.Name("price"))), prices::add)));
+        new JacksonTree<>(new Jackson2Tree()).eval(BOOKSTORE, List.of(
+                new Path<>(Identifier.ROOT, List.of(new Segment.Descendant<>(new Selector.Name<>("author"))), authors::add),
+                new Path<>(Identifier.ROOT, List.of(new Segment.Descendant<>(new Selector.Name<>("price"))), prices::add)));
 
         // Then
         assertThat(authors).map(JsonNode::asText)
@@ -164,7 +164,7 @@ class JacksonTreeTest {
     @Test
     void nonMatchingChildPathYieldsNoResults() {
         // When
-        var none = eval(new Segment.Child(new Selector.Name("nonexistent")), new Segment.Child(new Selector.Name("author")));
+        var none = eval(new Segment.Child<>(new Selector.Name<>("nonexistent")), new Segment.Child<>(new Selector.Name<>("author")));
 
         // Then
         assertThat(none).isEmpty();
@@ -173,7 +173,7 @@ class JacksonTreeTest {
     @Test
     void sliceSelectsHalfOpenRange() {
         // When
-        var letters = evalOn(LETTERS, new Segment.Child(new Selector.Slice(1, 3)));
+        var letters = evalOn(LETTERS, new Segment.Child<>(new Selector.Slice<>(1, 3)));
 
         // Then
         assertThat(letters).map(JsonNode::asText).containsExactly("b", "c");
@@ -182,7 +182,7 @@ class JacksonTreeTest {
     @Test
     void sliceWithoutEndRunsToArrayEnd() {
         // When
-        var letters = evalOn(LETTERS, new Segment.Child(new Selector.Slice(5, null)));
+        var letters = evalOn(LETTERS, new Segment.Child<>(new Selector.Slice<>(5, null)));
 
         // Then
         assertThat(letters).map(JsonNode::asText).containsExactly("f", "g");
@@ -191,7 +191,7 @@ class JacksonTreeTest {
     @Test
     void sliceAppliesStep() {
         // When
-        var letters = evalOn(LETTERS, new Segment.Child(new Selector.Slice(1, 5, 2)));
+        var letters = evalOn(LETTERS, new Segment.Child<>(new Selector.Slice<>(1, 5, 2)));
 
         // Then
         assertThat(letters).map(JsonNode::asText).containsExactly("b", "d");
@@ -200,7 +200,7 @@ class JacksonTreeTest {
     @Test
     void sliceNormalisesNegativeStart() {
         // When
-        var letters = evalOn(LETTERS, new Segment.Child(new Selector.Slice(-3, null)));
+        var letters = evalOn(LETTERS, new Segment.Child<>(new Selector.Slice<>(-3, null)));
 
         // Then
         assertThat(letters).map(JsonNode::asText).containsExactly("e", "f", "g");
@@ -209,7 +209,7 @@ class JacksonTreeTest {
     @Test
     void negativeStepSliceSelectsReversedRange() {
         // When
-        var letters = evalOn(LETTERS, new Segment.Child(new Selector.Slice(5, 1, -2)));
+        var letters = evalOn(LETTERS, new Segment.Child<>(new Selector.Slice<>(5, 1, -2)));
 
         // Then
         // RFC 9535 yields ["f", "d"]; the single-pass traversal emits matches in document order.
@@ -219,7 +219,7 @@ class JacksonTreeTest {
     @Test
     void descendantSliceSelectsFromArraysAtAnyDepth() {
         // When
-        var firstTwoBooks = eval(new Segment.Descendant(new Selector.Slice(0, 2)));
+        var firstTwoBooks = eval(new Segment.Descendant<>(new Selector.Slice<>(0, 2)));
 
         // Then
         assertThat(firstTwoBooks).map(book -> book.get("author").asText())
@@ -230,9 +230,9 @@ class JacksonTreeTest {
     void childFilterSelectsArrayElementsSatisfyingPredicate() {
         // When: $.store.book[?@.price < 10]
         var cheap = eval(
-                new Segment.Child(new Selector.Name("store")),
-                new Segment.Child(new Selector.Name("book")),
-                new Segment.Child(new Selector.Filter((node, root) -> node.path("price").asDouble() < 10)));
+                new Segment.Child<>(new Selector.Name<>("store")),
+                new Segment.Child<>(new Selector.Name<>("book")),
+                new Segment.Child<>(new Selector.Filter<>((JsonNode node, JsonNode root) -> node.path("price").asDouble() < 10)));
 
         // Then
         assertThat(cheap).map(book -> book.get("title").asText())
@@ -243,8 +243,8 @@ class JacksonTreeTest {
     void childFilterExistenceTestSelectsMembers() {
         // When: $..book[?@.isbn]
         var withIsbn = eval(
-                new Segment.Descendant(new Selector.Name("book")),
-                new Segment.Child(new Selector.Filter((node, root) -> node.has("isbn"))));
+                new Segment.Descendant<>(new Selector.Name<>("book")),
+                new Segment.Child<>(new Selector.Filter<>((JsonNode node, JsonNode root) -> node.has("isbn"))));
 
         // Then
         assertThat(withIsbn).map(book -> book.get("title").asText())
@@ -255,8 +255,8 @@ class JacksonTreeTest {
     void filterSelectsObjectMemberValues() {
         // When: $.store[?@.price] — of store's members, only the bicycle has a price
         var priced = eval(
-                new Segment.Child(new Selector.Name("store")),
-                new Segment.Child(new Selector.Filter((node, root) -> node.has("price"))));
+                new Segment.Child<>(new Selector.Name<>("store")),
+                new Segment.Child<>(new Selector.Filter<>((JsonNode node, JsonNode root) -> node.has("price"))));
 
         // Then
         assertThat(priced).map(node -> node.get("color").asText()).containsExactly("red");
@@ -265,7 +265,7 @@ class JacksonTreeTest {
     @Test
     void descendantFilterMatchesAtAnyDepth() {
         // When: $..[?@.price < 10]
-        var cheap = eval(new Segment.Descendant(new Selector.Filter((node, root) -> node.has("price") && node.get("price").asDouble() < 10)));
+        var cheap = eval(new Segment.Descendant<>(new Selector.Filter<>((JsonNode node, JsonNode root) -> node.has("price") && node.get("price").asDouble() < 10)));
 
         // Then
         assertThat(cheap).map(book -> book.get("title").asText())
@@ -276,8 +276,8 @@ class JacksonTreeTest {
     void filterCanReferenceRoot() {
         // When: $.a[?@.b == $.x] — $.x is absent, so it matches elements whose 'b' is also absent (RFC 9535 §2.3.5.3)
         var matched = evalOn(FILTER_DOC,
-                new Segment.Child(new Selector.Name("a")),
-                new Segment.Child(new Selector.Filter((node, root) -> Objects.equals(node.get("b"), root.get("x")))));
+                new Segment.Child<>(new Selector.Name<>("a")),
+                new Segment.Child<>(new Selector.Filter<>((JsonNode node, JsonNode root) -> Objects.equals(node.get("b"), root.get("x")))));
 
         // Then
         assertThat(matched).map(JsonNode::asInt).containsExactly(3, 5, 1, 2, 4, 6);
@@ -287,20 +287,20 @@ class JacksonTreeTest {
     void filterCanInitiateNestedTraversalFromRoot() {
         // When: $.a[?@ == $.o.p] where '$.o.p' is resolved by a nested traversal from the root
         var matched = evalOn(FILTER_DOC,
-                new Segment.Child(new Selector.Name("a")),
-                new Segment.Child(new Selector.Filter((node, root) -> node.equals(queryOne(root,
-                        new Segment.Child(new Selector.Name("o")),
-                        new Segment.Child(new Selector.Name("p")))))));
+                new Segment.Child<>(new Selector.Name<>("a")),
+                new Segment.Child<>(new Selector.Filter<>((JsonNode node, JsonNode root) -> node.equals(queryOne(root,
+                        new Segment.Child<>(new Selector.Name<>("o")),
+                        new Segment.Child<>(new Selector.Name<>("p")))))));
 
         // Then
         assertThat(matched).map(JsonNode::asInt).containsExactly(1);
     }
 
     /** Runs a nested query against {@code node}, returning its single result (or {@code null} if there is none). */
-    private static JsonNode queryOne(JsonNode node, Segment... segments) {
+    private static JsonNode queryOne(JsonNode node, Segment<JsonNode>... segments) {
         var results = new ArrayList<JsonNode>();
-        new JacksonTree().eval(node, List.of(new Path(Identifier.ROOT, List.of(segments), results::add)));
-        return results.isEmpty() ? null : results.get(0);
+        new JacksonTree<>(new Jackson2Tree()).eval(node, List.of(new Path<>(Identifier.ROOT, List.of(segments), results::add)));
+        return results.isEmpty() ? null : results.getFirst();
     }
 
 }
